@@ -4,23 +4,21 @@ import ch.difty.kris.accept
 import ch.difty.kris.domain.RisRecord
 import ch.difty.kris.domain.RisType
 import ch.difty.kris.process
-import kotlinx.coroutines.ExperimentalCoroutinesApi
-import kotlinx.coroutines.InternalCoroutinesApi
+import io.kotest.core.spec.style.DescribeSpec
+import kotlinx.coroutines.Dispatchers
+import kotlinx.coroutines.withContext
 import org.amshove.kluent.shouldHaveSize
-import org.spekframework.spek2.Spek
-import org.spekframework.spek2.style.specification.describe
 import java.io.File
 
-@Suppress("SpellCheckingInspection")
-@OptIn(ExperimentalCoroutinesApi::class, InternalCoroutinesApi::class)
-object KRisIoUsageImportSpec : Spek({
+@Suppress("unused")
+object KRisIoUsageImportSpec : DescribeSpec({
 
     describe("importing from file") {
-        val file by memoized {
-            File.createTempFile("kris1", null, null).also {
-                it.accept(listOf(RisRecord(type = RisType.JOUR)))
-                it.deleteOnExit()
-            }
+        val file = withContext(Dispatchers.IO) {
+            File.createTempFile("kris1", null, null)
+        }.also {
+            it.accept(listOf(RisRecord(type = RisType.JOUR)))
+            it.deleteOnExit()
         }
 
         it("can read from File") {
